bluec-tests/tests/invalid/types_short/var_name_long.c
int main(void) {
    int short = 5;
    return short;
}